localstack camel sqs example

--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,19 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-aws2-s3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-aws2-sqs</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sqs</artifactId>
         </dependency>
 
         <!--
